# ProtobufLight

./: CMakeLists.txt  LICENSE  ProtobufLight.hpp  ProtobufLightReflection.hpp  protobuflight_protoc.py
.github/workflows/: tests.yml
cmake/: ProtobufLightConfig.cmake.in
include/ProtobufLight/: ProtobufLightReflection.hpp
test/: CMakeLists.txt  main.cpp  protobuf.proto  protobuflight.proto  test.pb.cc  test.pb.h  test.proto
test/lightproto/: compat_v1_light.pb.h  compat_v1_light.proto  compat_v2_light.pb.h  compat_v2_light.proto  defaults_light.pb.h  defaults_light.proto  maps_messages_light.pb.h  maps_messages_light.proto  maps_scalars_light.pb.h  maps_scalars_light.proto  nested_light.pb.h  nested_light.proto  oneof_all_light.pb.h  oneof_all_light.proto  optional_presence_light.pb.h  optional_presence_light.proto  rebuilt_protobuflight.bat  repeated_messages_light.pb.h  repeated_messages_light.proto  repeated_scalars_light.pb.h  repeated_scalars_light.proto  scalars_light.pb.h  scalars_light.proto
test/proto/: compat_v1.pb.cc  compat_v1.pb.h  compat_v1.proto  compat_v2.pb.cc  compat_v2.pb.h  compat_v2.proto  defaults.pb.cc  defaults.pb.h  defaults.proto  maps_messages.pb.cc  maps_messages.pb.h  maps_messages.proto  maps_scalars.pb.cc  maps_scalars.pb.h  maps_scalars.proto  nested.pb.cc  nested.pb.h  nested.proto  oneof_all.pb.cc  oneof_all.pb.h  oneof_all.proto  optional_presence.pb.cc  optional_presence.pb.h  optional_presence.proto  rebuilt_protobuf.bat  repeated_messages.pb.cc  repeated_messages.pb.h  repeated_messages.proto  repeated_scalars.pb.cc  repeated_scalars.pb.h  repeated_scalars.proto  scalars.pb.cc  scalars.pb.h  scalars.proto
